--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,34 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Module-Runtime
-version:      0.004
-version_from: lib/Module/Runtime.pm
-installdirs:  site
+---
+name: Module-Runtime
+version: 0.005
+author:
+  - 'Andrew Main (Zefram) <zefram@fysh.org>'
+abstract: runtime module handling
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
-
+  Carp: 0
+  Exporter: 0
+  base: 0
+  perl: 5.006
+  strict: 0
+  warnings: 0
+build_requires:
+  Math::Complex: 0
+  Math::Trig: 0
+  Module::Build: 0
+  Test::More: 0
+  perl: 5.006
+  strict: 0
+  warnings: 0
+dynamic_config: 0
+provides:
+  Module::Runtime:
+    file: lib/Module/Runtime.pm
+    version: 0.005
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
