Import of ZEFRAM/Module-Runtime-0.007 from CPAN.
gitpan-cpan-distribution: Module-Runtime
gitpan-cpan-version:      0.007
gitpan-cpan-path:         ZEFRAM/Module-Runtime-0.007.tar.gz
gitpan-cpan-author:       ZEFRAM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,34 +1,35 @@
 ---
-name: Module-Runtime
-version: 0.006
+abstract: 'runtime module handling'
 author:
   - 'Andrew Main (Zefram) <zefram@fysh.org>'
-abstract: runtime module handling
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Carp: 0
-  Exporter: 0
-  parent: 0
-  perl: 5.006
-  strict: 0
-  warnings: 0
 build_requires:
-  Math::Complex: 0
-  Math::Trig: 0
   Module::Build: 0
   Test::More: 0
   perl: 5.006
   strict: 0
   warnings: 0
+configure_requires:
+  Module::Build: 0
+  perl: 5.006
+distribution_type: module
 dynamic_config: 0
+generated_by: 'Module::Build version 0.3603'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Module-Runtime
 provides:
   Module::Runtime:
     file: lib/Module/Runtime.pm
-    version: 0.006
-generated_by: Module::Build version 0.31012
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
-distribution_type: module
+    version: 0.007
+requires:
+  Exporter: 0
+  Params::Classify: 0
+  parent: 0
+  perl: 5.006
+  strict: 0
+  warnings: 0
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.007
