Import of ZEFRAM/Module-Runtime-0.008 from CPAN.
gitpan-cpan-distribution: Module-Runtime
gitpan-cpan-version:      0.008
gitpan-cpan-path:         ZEFRAM/Module-Runtime-0.008.tar.gz
gitpan-cpan-author:       ZEFRAM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -11,9 +11,10 @@ build_requires:
 configure_requires:
   Module::Build: 0
   perl: 5.006
-distribution_type: module
+  strict: 0
+  warnings: 0
 dynamic_config: 0
-generated_by: 'Module::Build version 0.3603'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110580'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,7 +23,7 @@ name: Module-Runtime
 provides:
   Module::Runtime:
     file: lib/Module/Runtime.pm
-    version: 0.007
+    version: 0.008
 requires:
   Exporter: 0
   Params::Classify: 0
@@ -32,4 +33,4 @@ requires:
   warnings: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.007
+version: 0.008
