--- a/META.yml
+++ b/META.yml
@@ -14,7 +14,7 @@ configure_requires:
   strict: 0
   warnings: 0
 dynamic_config: 0
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Module::Build version 0.4204, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,9 +23,10 @@ name: Module-Runtime
 provides:
   Module::Runtime:
     file: lib/Module/Runtime.pm
-    version: 0.013
+    version: 0.014
 requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.013
+  repository: git://git.fysh.org/zefram/Module-Runtime.git
+version: 0.014
